--- a/Assets/_scss/ext/_exinitFX.scss
+++ b/Assets/_scss/ext/_exinitFX.scss
@@ -6,8 +6,8 @@
  * ========================================================== */
 
 
- /* =============================================================================
-Controls
+/* =============================================================================
+$ Controls
 ================================================================================ */
 .exinitFXprev,
 .exinitFXpausePlay,
@@ -17,6 +17,6 @@ Controls
 }
 
 
- /* =============================================================================
-Content
+/* =============================================================================
+$ Content
 ================================================================================ */
