--- a/Assets/_scss/ext/_news.scss
+++ b/Assets/_scss/ext/_news.scss
@@ -6,16 +6,16 @@
  * ========================================================== */
 
 
- /* =============================================================================
-List
+/* =============================================================================
+$ List
 ================================================================================ */
 
 
- /* =============================================================================
-Archiv
+/* =============================================================================
+$ Archiv
 ================================================================================ */
 
 
- /* =============================================================================
-Single
+/* =============================================================================
+$ Single
 ================================================================================ */
