--- a/Assets/_scss/globals/_forms.scss
+++ b/Assets/_scss/globals/_forms.scss
@@ -7,7 +7,7 @@
 
 
 /* =============================================================================
-General styling of Input Fields
+$ General styling of Input Fields
 ================================================================================ */
 @include placeHolder($placeHolderColor);
 
@@ -52,7 +52,7 @@ input[type="submit"] {
 
 
 /* =============================================================================
-General styling of Form Fields
+$ General styling of Form Fields
 ================================================================================ */
 form {
   ol { list-style: none; }
