--- a/Assets/_scss/globals/_grid.scss
+++ b/Assets/_scss/globals/_grid.scss
@@ -7,13 +7,13 @@
 
 
 /* =============================================================================
-Variables
+$ Variables
 ================================================================================ */
 $columWidth:          $layoutWidth / $totalColumns - $columnGutter !default;
 
 
 /* =============================================================================
-Grid Classes
+$ Grid Classes
 ================================================================================ */
 // Base styles for .row .# classes
 .columns {
