--- a/Assets/_scss/globals/_media-queries.scss
+++ b/Assets/_scss/globals/_media-queries.scss
@@ -7,14 +7,14 @@
 
 
 /* =============================================================================
-Touch-devices
+$ Touch-devices
 ================================================================================ */
 .touch {
 }
 
 
 /* =============================================================================
-Basic Settings
+$ Basic Settings
 ================================================================================ */
 @media only screen and (max-width: 800px) {
   #{headings(all)}, p, li {
@@ -27,7 +27,7 @@ Basic Settings
 
 
 /* =============================================================================
-Tablets
+$ Tablets
 ================================================================================ */
 @media only screen and (min-width: 481px) and (max-width: 800px) {
 
@@ -37,7 +37,7 @@ Tablets
 
 
 /* =============================================================================
-Smartphones - Landscape (480px), Portrait (320px)
+$ Smartphones - Landscape (480px), Portrait (320px)
 ================================================================================ */
 @media only screen and (max-width: 480px) {
 
@@ -46,7 +46,7 @@ Smartphones - Landscape (480px), Portrait (320px)
 
 
 /* =============================================================================
-HDPI CSS-Image fixes
+$ HDPI CSS-Image fixes
 ================================================================================ */
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
        only screen and (min-resolution: 144dpi) {
@@ -58,7 +58,7 @@ HDPI CSS-Image fixes
 
 
 /* =============================================================================
-Print styles.
+$ Print styles.
 Inlined to avoid another HTTP connection: h5bp.com/r
 ================================================================================ */
 @media print {
