--- a/Assets/_scss/globals/_typography.scss
+++ b/Assets/_scss/globals/_typography.scss
@@ -7,7 +7,7 @@
 
 
 /* =============================================================================
-Links and other stuff
+$ Links and other stuff
 ================================================================================ */
 a,
 a:visited { color: $linkColor; text-decoration: none; }
@@ -21,7 +21,7 @@ a {
 
 
 /* =============================================================================
-Headings
+$ Headings
 ================================================================================ */
 #{headings(all)},
 .h1, .h2, .h3,
@@ -62,7 +62,7 @@ h6, .h6 {
 
 
 /* =============================================================================
-Paragraphs
+$ Paragraphs
 ================================================================================ */
 p {
   margin: 0 0 1em;
@@ -74,7 +74,7 @@ p {
 
 
 /* =============================================================================
-Attachements & Images
+$ Attachements & Images
 ================================================================================ */
 a {
   img { @include transition(opacity 0.2s); }
@@ -84,7 +84,7 @@ embed, iframe, object, img { max-width: 100%; }
 
 
 /* =============================================================================
-Lists
+$ Lists
 ================================================================================ */
 ol { list-style-type: decimal; }
 ol ol { list-style: upper-alpha; }
@@ -93,7 +93,20 @@ ol ol ol ol { list-style: lower-alpha; }
 
 
 /* =============================================================================
-TYPEKIT
+$ HTML-Elements
+================================================================================ */
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px $basicBorderStyle $basicBorderColor;
+    margin: 1em 0;
+    padding: 0;
+}
+
+
+/* =============================================================================
+$ TYPEKIT
 Basic styling for browsers that dont support @font-face
 ================================================================================
 .no-js,
