--- a/Assets/_scss/globals/_base.scss
+++ b/Assets/_scss/globals/_base.scss
@@ -7,7 +7,7 @@
 
 
 /* =============================================================================
-Maincontainer
+$ Maincontainer
 ================================================================================ */
 .wrapper {
 	margin: 0 auto;
@@ -24,7 +24,7 @@ Maincontainer
 
 
 /* =============================================================================
-Sprites
+$ Sprites
 ================================================================================ */
 // .sprite { background-image: url('../img/sprite.png'); background-repeat: no-repeat; }
 // Usage:
@@ -33,7 +33,7 @@ Sprites
 
 
 /* =============================================================================
-Header
+$ Header
 ================================================================================ */
 /* ======================== Logo ======================== */
 #header {
@@ -80,19 +80,19 @@ Header
 
 
 /* =============================================================================
-FCE's / Content
+$ FCE's / Content
 ================================================================================ */
 
 
 
 /* =============================================================================
-Footer
+$ Footer
 ================================================================================ */
 
 
 
 /* =============================================================================
-Chrome Frame
+$ Chromeframe
 ================================================================================ */
 .chromeframe {
 	display: block;
