--- a/Assets/_scss/globals/_css3-fallbacks.scss
+++ b/Assets/_scss/globals/_css3-fallbacks.scss
@@ -7,7 +7,7 @@
 
 
 /* =============================================================================
-CSS-Gradients
+$ CSS-Gradients
 ================================================================================
 .no-cssgradients {
 
@@ -15,7 +15,7 @@ CSS-Gradients
 
 
 /* =============================================================================
-RGBA
+$ RGBA
 ================================================================================
 .no-rgba {
 	
@@ -23,7 +23,7 @@ RGBA
 
 
 /* =============================================================================
-Box-Shadow
+$ Box-Shadow
 ================================================================================
 .no-boxshadow {
 
