--- a/Assets/_scss/globals/_normalize.scss
+++ b/Assets/_scss/globals/_normalize.scss
@@ -1,37 +1,101 @@
 /* ==========================================================
  * normalize.scss
+ * Version: 08/08/2012
  * 
  * Normalize the browser-default styling
- * DOCS: http://html5boilerplate.com/docs/css/#the-css
+ * DOCS: http://necolas.github.com/normalize.css/
  * ========================================================== */
 
 
 /* =============================================================================
-HTML5 display definitions
-========================================================================== */
-
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, nav, section, summary { display: block; }
-audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
-audio:not([controls]) { display: none; }
-[hidden] { display: none; }
-
-
-/* =============================================================================
-Base
+$ HTML5 display definitions
 ========================================================================== */
 
 /*
-* 1. Correct text resizing oddly in IE6/7 when body font-size is set using em units
-* 2. Prevent iOS text size adjust on device orientation change, without disabling user zoom: h5bp.com/g
-*/
+ * Corrects `block` display not defined in IE6/7/8/9 & FF3.
+ */
 
-html { font-size: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
-html, button, input, select, textarea {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section,
+summary {
+    display: block;
+}
+
+/*
+ * Corrects `inline-block` display not defined in IE6/7/8/9 & FF3.
+ */
+
+audio,
+canvas,
+video {
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+}
+
+/*
+ * Prevents modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS5 devices.
+ */
+
+audio:not([controls]) {
+    display: none;
+    height: 0;
+}
+
+/*
+ * Addresses styling for `hidden` attribute not present in IE7/8/9, FF3, S4.
+ * Known issue: no IE6 support.
+ */
+
+[hidden] {
+    display: none;
+}
+
+
+/* =============================================================================
+$ Base
+========================================================================== */
+
+/*
+ * 1. Corrects text resizing oddly in IE6/7 when body `font-size` is set using
+ *    `em` units.
+ * 2. Prevents iOS text size adjust after orientation change, without disabling
+ *    user zoom.
+ */
+
+html {
+    font-size: 100%; /* 1 */
+    -webkit-text-size-adjust: 100%; /* 2 */
+    -ms-text-size-adjust: 100%; /* 2 */
+}
+/*
+ * Addresses `font-family` inconsistency between `textarea` and other form
+ * elements.
+ */
+
+html,
+button,
+input,
+select,
+textarea {
     font-family: $baseFontFamily;
     color: $baseColor;
     font-weight: $baseFontWeight;
 }
+
+/*
+ * Addresses margins handled incorrectly in IE6/7.
+ */
+
 body {
     margin: 0;
     font-size: $baseFontSize;
@@ -41,63 +105,90 @@ body {
 }
 
 
-/* =============================================================================
-Links
-========================================================================== */
-
-/* Improve readability when focused and hovered in all browsers: h5bp.com/h */
-a:hover, a:active { outline: 0; }
-
 
 /* =============================================================================
-Typography
+$ Links
 ========================================================================== */
 
-abbr[title] { border-bottom: 1px dotted; cursor: help; }
+/*
+ * Addresses `outline` inconsistency between Chrome and other browsers.
+ */
 
-b, strong { font-weight: $bold; }
-
-blockquote { margin: 1em 20px; }
-blockquote:before,
-blockquote:after {
-    content: '"';
-    font-size: 20px;
-    padding: 0 4px 0 0;
-    line-height: 0;
+a:focus {
+    outline: thin dotted;
 }
+
+/*
+ * Improves readability when focused and also mouse hovered in all browsers.
+ * people.opera.com/patrickl/experiments/keyboard/test
+ */
+
+a:active,
+a:hover {
+    outline: 0;
+}
+
+
+/* =============================================================================
+$ Typography
+========================================================================== */
+
+/*
+ * Addresses styling not present in IE7/8/9, S5, Chrome.
+ */
+
+abbr[title] {
+    border-bottom: 1px dotted;
+    cursor: help;
+}
+
+/*
+ * Addresses style set to `bolder` in FF3+, S4/5, Chrome.
+ */
+
+b,
+strong {
+    font-weight: bold;
+}
+
+blockquote {
+    margin: 1em 40px;
+}
+
+/*
+ * Addresses styling not present in S5, Chrome.
+ */
 
 dfn {
     font-style: italic;
 }
 
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px $basicBorderStyle $basicBorderColor;
-    margin: 1em 0;
-    padding: 0;
-}
-
-ins {
-    background: #FFF;
-    color: $cd-main;
-    text-decoration: none;
-}
+/*
+ * Addresses styling not present in IE6/7/8/9.
+ */
 
 mark {
-    background: $cd-main;
-    color: #FFF;
-    font-weight: 700;
+    background: #ff0;
+    color: #000;
 }
 
 /*
-* Redeclare monospace font family: h5bp.com/j
-*/
+ * Addresses margins set differently in IE6/7.
+ */
 
-pre,
+p,
+pre {
+    margin: 1em 0;
+}
+
+/*
+ * Corrects font family set oddly in IE6, S4/5, Chrome.
+ * en.wikipedia.org/wiki/User:Davidgothberg/Test59
+ */
+
 code,
 kbd,
+pre,
 samp {
     font-family: $monoFontFamily;
     _font-family: 'courier new', monospace;
@@ -105,8 +196,8 @@ samp {
 }
 
 /*
-* Improve readability of pre-formatted text
-*/
+ * Improves readability of pre-formatted text in all browsers.
+ */
 
 pre {
     white-space: pre;
@@ -114,23 +205,32 @@ pre {
     word-wrap: break-word;
 }
 
+/*
+ * Addresses CSS quotes not supported in IE6/7.
+ */
+
 q {
     quotes: none;
 }
 
+/*
+ * Addresses `quotes` property not supported in S4.
+ */
+
 q:before,
 q:after {
-    content: "";
+    content: '';
     content: none;
 }
 
 small {
-    font-size: 85%;
+    font-size: 75%;
 }
 
 /*
-* Position subscript and superscript content without affecting line-height: h5bp.com/k
-*/
+ * Prevents `sub` and `sup` affecting `line-height` in all browsers.
+ * gist.github.com/413930
+ */
 
 sub,
 sup {
@@ -148,48 +248,64 @@ sub {
     bottom: -0.25em;
 }
 
+/* ==========================================================================
+   Lists
+   ========================================================================== */
 
-/* =============================================================================
-Lists
-========================================================================== */
+/*
+ * Addresses margins set differently in IE6/7.
+ */
 
-ul,
-ol {
+dl,
+menu,
+ol,
+ul {
     margin: 1em 0;
-    padding: 0 0 0 40px;
 }
 
 dd {
     margin: 0 0 0 40px;
 }
 
+/*
+ * Addresses paddings set differently in IE6/7.
+ */
+
+menu,
+ol,
+ul {
+    padding: 0 0 0 40px;
+}
+
+/*
+ * Corrects list images handled incorrectly in IE7.
+ */
+
 nav ul,
 nav ol {
     list-style: none;
     list-style-image: none;
-    margin: 0;
-    padding: 0;
 }
 
 
 /* =============================================================================
-Embedded content
+$ Embedded content
 ========================================================================== */
 
 /*
-* 1. Improve image quality when scaled in IE7: h5bp.com/d
-* 2. Remove the gap between images and borders on image containers: h5bp.com/i/440
-*/
+ * 1. Removes border when inside `a` element in IE6/7/8/9, FF3.
+ * 2. Improves image quality when scaled in IE7.
+ *    code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/
+ */
 
 img {
-    border: 0;
-    vertical-align: middle;
-    -ms-interpolation-mode: bicubic;
+    border: 0; /* 1 */
+    -ms-interpolation-mode: bicubic; /* 2 */
 }
 
 /*
-* Correct overflow not hidden in IE9
-*/
+ * Corrects overflow displayed oddly in IE9.
+ */
 
 svg:not(:root) {
     overflow: hidden;
@@ -197,8 +313,12 @@ svg:not(:root) {
 
 
 /* =============================================================================
-Figures
+$ Figures
 ========================================================================== */
+
+/*
+ * Addresses margin not present in IE6/7/8/9, S5, O11.
+ */
 
 figure {
     margin: 0;
@@ -206,58 +326,60 @@ figure {
 
 
 /* =============================================================================
-Forms
+$ Forms
 ========================================================================== */
+
+/*
+ * Corrects margin displayed oddly in IE6/7.
+ */
 
 form {
     margin: 0;
 }
 
+/*
+ * Define consistent border, margin, and padding.
+ */
+
 fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
+    border: 1px $basicBorderStyle $basicBorderColor;
+    margin: 0 2px;
+    padding: 0.35em 0.625em 0.75em;
 }
 
 /*
-* Indicate that 'label' will shift focus to the associated form element
-*/
-
-label {
-    cursor: pointer;
-}
-
-/*
-* 1. Correct color not inheriting in IE6/7/8/9
-* 2. Correct alignment displayed oddly in IE6/7
-*/
+ * 1. Corrects color not being inherited in IE6/7/8/9.
+ * 2. Corrects text not wrapping in FF3.
+ * 3. Corrects alignment displayed oddly in IE6/7.
+ */
 
 legend {
-    border: 0;
+    border: 0; /* 1 */
     padding: 0;
-    white-space: normal;
-    *margin-left: -7px;
+    white-space: normal; /* 2 */
+    *margin-left: -7px; /* 3 */
 }
 
 /*
-* 1. Correct font-size not inheriting in all browsers
-* 2. Remove margins in FF3/4 S5 Chrome
-* 3. Define consistent vertical alignment display in all browsers
-*/
+ * 1. Corrects font size not being inherited in all browsers.
+ * 2. Addresses margins set differently in IE6/7, FF3+, S5, Chrome.
+ * 3. Improves appearance and consistency in all browsers.
+ */
 
 button,
 input,
 select,
 textarea {
-    font-size: 100%;
-    margin: 0;
-    vertical-align: baseline;
-    *vertical-align: middle;
+    font-size: 100%; /* 1 */
+    margin: 0; /* 2 */
+    vertical-align: baseline; /* 3 */
+    *vertical-align: middle; /* 3 */
 }
 
 /*
-* 1. Define line-height as normal to match FF3/4 (set using !important in the UA stylesheet)
-*/
+ * Addresses FF3/4 setting `line-height` on `input` using `!important` in the
+ * UA stylesheet.
+ */
 
 button,
 input {
@@ -265,23 +387,27 @@ input {
 }
 
 /*
-* 1. Display hand cursor for clickable form elements
-* 2. Allow styling of clickable form elements in iOS
-* 3. Correct inner spacing displayed oddly in IE7 (doesn't effect IE6)
-*/
+ * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+ *    and `video` controls.
+ * 2. Corrects inability to style clickable `input` types in iOS.
+ * 3. Improves usability and consistency of cursor style between image-type
+ *    `input` and others.
+ * 4. Removes inner spacing in IE7 without affecting normal text inputs.
+ *    Known issue: inner spacing remains in IE6.
+ */
 
 button,
-input[type="button"],
+html input[type="button"], /* 1 */
 input[type="reset"],
 input[type="submit"] {
-    cursor: pointer;
-    -webkit-appearance: button;
-    *overflow: visible;
+    -webkit-appearance: button; /* 2 */
+    cursor: pointer; /* 3 */
+    *overflow: visible;  /* 4 */
 }
 
 /*
-* Re-set default cursor for disabled elements
-*/
+ * Re-set default cursor for disabled elements.
+ */
 
 button[disabled],
 input[disabled] {
@@ -289,32 +415,45 @@ input[disabled] {
 }
 
 /*
-* Consistent box sizing and appearance
-*/
+ * 1. Addresses box sizing set to content-box in IE8/9.
+ * 2. Removes excess padding in IE8/9.
+ * 3. Removes excess padding in IE7.
+ *    Known issue: excess padding remains in IE6.
+ */
 
 input[type="checkbox"],
 input[type="radio"] {
-    box-sizing: border-box;
-    padding: 0;
-    *width: 13px;
-    *height: 13px;
+    box-sizing: border-box; /* 1 */
+    padding: 0; /* 2 */
+    *height: 13px; /* 3 */
+    *width: 13px; /* 3 */
 }
 
+/*
+ * 1. Addresses `appearance` set to `searchfield` in S5, Chrome.
+ * 2. Addresses `box-sizing` set to `border-box` in S5, Chrome (include `-moz`
+ *    to future-proof).
+ */
+
 input[type="search"] {
-    -webkit-appearance: textfield;
+    -webkit-appearance: textfield; /* 1 */
     -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box;
+    -webkit-box-sizing: content-box; /* 2 */
     box-sizing: content-box;
 }
 
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button {
+/*
+ * Removes inner padding and search cancel button in S5, Chrome on OS X.
+ */
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
     -webkit-appearance: none;
 }
 
 /*
-* Remove inner padding and border in FF3/4: h5bp.com/l
-*/
+ * Removes inner padding and border in FF3+.
+ */
 
 button::-moz-focus-inner,
 input::-moz-focus-inner {
@@ -323,20 +462,24 @@ input::-moz-focus-inner {
 }
 
 /*
-* 1. Remove default vertical scrollbar in IE6/7/8/9
-* 2. Allow only vertical resizing
-*/
+ * 1. Removes default vertical scrollbar in IE6/7/8/9.
+ * 2. Improves readability and alignment in all browsers.
+ */
 
 textarea {
-    overflow: auto;
-    vertical-align: top;
-    resize: vertical;
+    overflow: auto; /* 1 */
+    vertical-align: top; /* 2 */
 }
 
+/* ==========================================================================
+   Tables
+   ========================================================================== */
 
-/* =============================================================================
-Tables
-========================================================================== */
+/*
+ * Remove most spacing between table cells.
+ */
 
-table { border-collapse: collapse; border-spacing: 0; }
-td { vertical-align: top; }
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
