--- a/Assets/_scss/modules/_module.scss
+++ b/Assets/_scss/modules/_module.scss
@@ -7,6 +7,6 @@
 
 
  /* =============================================================================
-Section
+$ Section
 ================================================================================ */
 /* ======================== Subsection ======================== */
