--- a/Assets/_scss/_settings/_mixins.scss
+++ b/Assets/_scss/_settings/_mixins.scss
@@ -20,11 +20,13 @@
 
 // ======================== CSS3 Word-breaker ============================
 @mixin hyphens {
+  -ms-word-break: break-all;
+      word-break: break-all;
+      word-break: break-word;
   -webkit-hyphens: auto;
      -moz-hyphens: auto;
       -ms-hyphens: auto;
-  hyphens: auto;
-  word-wrap: break-word;
+          hyphens: auto;
 }
 
 // ======================== REM Unit Mixin ===============================
