Removing unnecessary stuff
Removed the Typekit-Fallback snippet
Removed the linked images :hover

--- a/Assets/_scss/globals/_typography.scss
+++ b/Assets/_scss/globals/_typography.scss
@@ -64,22 +64,12 @@ h6, .h6 {
 /* =============================================================================
 $ Paragraphs
 ================================================================================ */
-p {
-  margin: 0 0 1em;
-  small {
-    font-size: 70%;
-    color: lighten($baseColor, 30%);
-  }
-}
+p { margin: 0 0 1em; }
 
 
 /* =============================================================================
 $ Attachements & Images
 ================================================================================ */
-a {
-  img { @include transition(opacity 0.2s); }
-  &:hover img { @include opacity(0.85); }
-}
 embed, iframe, object, img { max-width: 100%; }
 
 
@@ -103,25 +93,3 @@ hr {
     margin: 1em 0;
     padding: 0;
 }
-
-
-/* =============================================================================
-$ TYPEKIT
-Basic styling for browsers that dont support @font-face
-================================================================================
-.no-js,
-.wf-inactive {
-  #{headings(all)} {
-
-  }
-  p {
-    
-  }
-} */
-
-
-
-
-
-
-
