Added the @viewport rule
Added the @viewport rule, removed the sample MQs

--- a/Assets/_scss/globals/_media-queries.scss
+++ b/Assets/_scss/globals/_media-queries.scss
@@ -4,45 +4,10 @@
  * Media-queries (adaptve layout)
  * DOCS: 
  * ========================================================== */
-
-
-/* =============================================================================
-$ Touch-devices
-================================================================================ */
-.touch {
-}
-
-
-/* =============================================================================
-$ Basic Settings
-================================================================================ */
-@media only screen and (max-width: 800px) {
-  #{headings(all)}, p, li {
-    @include hyphens;
-    text-rendering: optimizeSpeed; // This will improve the speed on mobile devices
-  }
-  br { display: none; }
-  p a { display: inline-block; } // Inline-block so the links wont get the 'hyphens'-mixin
-}
-
-
-/* =============================================================================
-$ Tablets
-================================================================================ */
-@media only screen and (min-width: 481px) and (max-width: 800px) {
+@-ms-viewport { width: device-width }
 
 
 
-}
-
-
-/* =============================================================================
-$ Smartphones - Landscape (480px), Portrait (320px)
-================================================================================ */
-@media only screen and (max-width: 480px) {
-
-
-}
 
 
 /* =============================================================================
