--- a/Assets/_scss/globals/_base.scss
+++ b/Assets/_scss/globals/_base.scss
@@ -64,7 +64,7 @@ $ Header
 }
 
 /* ======================== Search ======================== */
-#searchform {
+.searchform {
 	position: absolute;
 	right: 30px;
 	top: 30px;
@@ -72,7 +72,7 @@ $ Header
 		float: left;
 		display: block;
 	}
-	input[type="text"] {    
+	input[type="search"] {    
 	}
 	input[type="submit"] {
 	}
