--- a/Assets/_scss/_settings/_mixins.scss
+++ b/Assets/_scss/_settings/_mixins.scss
@@ -91,26 +91,46 @@
   &:after { clear: both; }
 }
 
-// ======================== Media Queries ===============================
+// ======================== OldIE-Class fixes =============================== >>> Requires SASS 3.2 <<<<
+@mixin ie6 {
+  .lt-ie7 & {
+    @content;
+  }
+}
+@mixin ie7 {
+  .lt-ie8 & {
+    @content;
+  }
+}
+@mixin ie8 {
+  .lt-ie9 & {
+    @content;
+  }
+}
+
+// ======================== Media Queries =============================== >>> Requires SASS 3.2 <<<<
 // Be Prepared for SASS 3.2, embrace yourself!
 
-// @mixin responsive($media) {
-//   @if $media == tablet {
-//     @media screen and (max-width:$query-tablet) { @content; }
-//   }
-//   @else if $media == smartphoneLarge {
-//     @media screen and (max-width:$query-smartphoneLarge) { @content; }
-//   }
-//   @else if $media == smartphoneSmall {
-//     @media screen and (max-width:$query-smartphoneSmall) { @content; }
-//   }
-// }
+@mixin responsive($media) {
+  @if $media == tablet {
+    @media screen and (max-width:$query-tablet) { @content; }
+  }
+  @else if $media == smartphoneLarge {
+    @media screen and (max-width:$query-smartphoneLarge) { @content; }
+  }
+  @else if $media == smartphoneSmall {
+    @media screen and (max-width:$query-smartphoneSmall) { @content; }
+  }
+}
 
 // Usage
 // .foo {
 //   float: left;
 //   width: 1000px;
-// 
+//   @include ie6 {
+//     display: none;
+//   }
+
 //   @include responsive(tablet) {
 //     float: none;
 //     width: 600px;
