--- a/Assets/_scss/globals/_base.scss
+++ b/Assets/_scss/globals/_base.scss
@@ -26,10 +26,9 @@ $ Maincontainer
 /* =============================================================================
 $ Sprites
 ================================================================================ */
-// .sprite { background-image: url('../img/sprite.png'); background-repeat: no-repeat; }
+%sprite { background-image: url('../img/sprite.png'); background-repeat: no-repeat; }
 // Usage:
 // @extend .sprite;
-// or use the class itself
 
 
 /* =============================================================================
