--- a/Assets/_scss/globals/_base.scss
+++ b/Assets/_scss/globals/_base.scss
@@ -28,7 +28,7 @@ $ Sprites
 ================================================================================ */
 %sprite { background-image: url('../img/sprite.png'); background-repeat: no-repeat; }
 // Usage:
-// @extend .sprite;
+// @extend %sprite;
 
 
 /* =============================================================================
