--- a/Assets/_scss/globals/_media-queries.scss
+++ b/Assets/_scss/globals/_media-queries.scss
@@ -4,8 +4,13 @@
  * Media-queries (adaptve layout)
  * DOCS: 
  * ========================================================== */
+/* RWD
 @-ms-viewport { width: device-width }
-
+@-webkit-viewport { width : device-width; }
+@-moz-viewport { width : device-width; }
+@-ms-viewport { width : device-width; }
+@-o-viewport { width : device-width; }
+@viewport { width : device-width; } */
 
 
 
