Update to Modernizr 2.6.2, Adding input $vars

--- a/Assets/_scss/globals/_forms.scss
+++ b/Assets/_scss/globals/_forms.scss
@@ -33,7 +33,7 @@ input[type="search"] {
 	@if $inputRadius != 0 { @include border-radius($inputRadius); }
 	@include transition(border-color .2s ease);
 	&:hover { border-color: darken($inputBorderColor, 20%); }
-	&:focus { outline: 0; border-color: $cd-main; }
+	&:focus { outline: 0; border-color: $inputFocusBorder; }
 }
 :invalid {
 	border-color: $inputErrorBorder !important;
