--- a/Assets/_scss/globals/_tables.scss
+++ b/Assets/_scss/globals/_tables.scss
@@ -12,9 +12,7 @@ $ Tables
 table {
 	max-width: 100% !important;
 	width: 100%;
-	caption {
-		text-align: left; // UA-Style is centered
-	}
+	caption {	text-align: left; }
 }
 th {
 	padding:7px 8px 3px;
