--- a/Assets/_scss/globals/_typography.scss
+++ b/Assets/_scss/globals/_typography.scss
@@ -17,7 +17,11 @@ a {
 }
 
 ::-moz-selection,
-::selection { background: $cd-main; color: #fff; text-shadow: none; }
+::selection {
+	background: $cd-main;
+	color: #fff;
+	text-shadow: none;
+}
 
 
 /* =============================================================================
@@ -63,7 +67,7 @@ h6, .h6 {
 /* =============================================================================
 $ Paragraphs
 ================================================================================ */
-p { margin: 0 0 1em; }
+p {	margin: 0 0 1em; }
 
 
 /* =============================================================================
