--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -35,7 +35,7 @@
 
 
 // =============================================================================
-// Extensions & Components
+// Extensions & Modules
 // =============================================================================
 // @import "modules/_module";				// Module X or Page X
 
