--- a/Assets/_scss/globals/_normalize.scss
+++ b/Assets/_scss/globals/_normalize.scss
@@ -1,6 +1,6 @@
 /* ==========================================================
- * normalize.scss
- * Version: 08/08/2012
+ * normalize.scss (v 1.0.1)
+ * Updated: 08/19/2012
  * 
  * Normalize the browser-default styling
  * DOCS: http://necolas.github.com/normalize.css/
@@ -224,7 +224,7 @@ q:after {
 }
 
 small {
-	font-size: 75%;
+	font-size: 80%;
 }
 
 /*
