Removed $headingsLineHeight, Added $verticalRythm, Added CSC-Menu reference

--- a/Assets/_scss/_settings/_settings.scss
+++ b/Assets/_scss/_settings/_settings.scss
@@ -6,7 +6,6 @@
 // ==========================================================
 
 
-
 // =============================================================================
 // Gid-System
 // =============================================================================
@@ -49,8 +48,7 @@ $baseColor:							#3C474B;
 $headingsFontFamily:		inherit; // empty to use $baseFontFamily
 $headingsFontWeight:		$bold;
 $headingsColor:					#000;
-$headingsLineHeight:		1.1;
-$lineHeightSpacing:			$baseFontSize * $baseLineHeight;
+$verticalRhythm:				$baseFontSize * $baseLineHeight;
 
 
 // =============================================================================
