--- a/Assets/_scss/globals/_base.scss
+++ b/Assets/_scss/globals/_base.scss
@@ -14,13 +14,18 @@ $ Maincontainer
 	width: $layoutWidth;
 	position: relative;
 }
-#header {}
-#content {}
-#footer {}
+#header {
 
-#content .wrapper {}
-#footer .wrapper {}
-#footer .wrapper {}
+	.wrapper {}
+}
+#content {
+
+	.wrapper {}
+}
+#footer {
+	
+	.wrapper {}
+}
 
 
 /* =============================================================================
