--- a/Assets/_scss/globals/_t3-general.scss
+++ b/Assets/_scss/globals/_t3-general.scss
@@ -27,6 +27,15 @@ $ CSC-Frames
 
 
 /* =============================================================================
+$ CSC-Menu
+================================================================================ */
+.csc-menu {
+	li {}
+	a {}
+}
+
+
+/* =============================================================================
 $ CSC-Sitemap
 ================================================================================ */
 .csc-sitemap {
