--- a/Assets/_scss/globals/_typography.scss
+++ b/Assets/_scss/globals/_typography.scss
@@ -29,13 +29,12 @@ $ Headings
 ================================================================================ */
 #{headings(all)},
 .h1, .h2, .h3,
-.h4, .h5, .h6 {  
+.h4, .h5, .h6 {
 	font-family: $headingsFontFamily;
 	font-weight: $headingsFontWeight;
 	color: $headingsColor;
-	line-height: $headingsLineHeight;
 	margin: 1em 0 0;
-	text-rendering: optimizeLegibility;
+	text-rendering: optimizeLegibility; // Optimized kerning for large font sizes
 	@include hyphens;
 	small {
 		font-size: 70%;
