Added Modernizr Fallback Mixins

--- a/Assets/_scss/_settings/_all.scss
+++ b/Assets/_scss/_settings/_all.scss
@@ -8,3 +8,4 @@
 @import "_settings";							// SASS Settings
 @import "_functions";							// SASS Settings
 @import "_mixins";								// SASS Mixins
+@import "_modernizr";							// Modernizr Fallback Mixins
