--- a/Assets/_scss/_settings/_modernizr.scss
+++ b/Assets/_scss/_settings/_modernizr.scss
@@ -5,6 +5,15 @@
 // DOCS: http://modernizr.com/docs/
 // ==========================================================
 
+// Usage:
+// .foo {
+// 		@include box-shadow(0 2px 2px rgba(#000, 0.2));
+//		@include no-boxshadow {
+//			border: 1px solid lighten(#000, 0.8);
+// 		}
+// }
+
+
 
 // ======================== No Javascript ============================
 @mixin no-js {
