--- a/Assets/_scss/globals/_media-queries.scss
+++ b/Assets/_scss/globals/_media-queries.scss
@@ -21,7 +21,7 @@ $ HDPI CSS-Image fixes
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
 						only screen and (min-resolution: 144dpi) {
 	// Usage:
-	// #header .logo {
+	// .logo {
 	//	background-image: url(../img/hdpi/logo.png);
 	// 	@include img-whr('hdpi/logo.png');
 	// }
