Added a placeholder file
To reduce duplicate code from @mixins without arguments, use @extend
%placeholder-name;

--- a/Assets/_scss/_settings/_all.scss
+++ b/Assets/_scss/_settings/_all.scss
@@ -9,3 +9,4 @@
 @import "_functions";							// SASS Settings
 @import "_mixins";								// SASS Mixins
 @import "_modernizr";							// Modernizr Fallback Mixins
+@import "_placeholders";					// SASS Placeholders
