--- a/Assets/_scss/globals/_base.scss
+++ b/Assets/_scss/globals/_base.scss
@@ -31,9 +31,7 @@ $ Maincontainer
 /* =============================================================================
 $ Sprites
 ================================================================================ */
-%sprite { background-image: url('../img/sprite.png'); background-repeat: no-repeat; }
-// Usage:
-// @extend %sprite;
+
 
 
 /* =============================================================================
@@ -58,6 +56,7 @@ $ Logos
 $ Navigations
 ================================================================================ */
 .nav {
+	ul { @extend %reset-list; }
 	li {
 		float: left;
 		&:hover a {}
