--- a/Assets/_scss/_settings/_mixins.scss
+++ b/Assets/_scss/_settings/_mixins.scss
@@ -6,9 +6,6 @@
 // ==========================================================
 
 
-// =============================================================================
-// Mixins
-// =============================================================================
 // ======================== Image-Dimensions =============================
 @mixin img-wh($img) {
 	width: image-width($img);
@@ -46,13 +43,6 @@
 	}
 }
 
-// ======================== Reset list ==================================
-@mixin reset-list {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-
 // ======================== CSS3 Triangle ===============================
 @mixin cssTriangle($triangleSize, $triangleColor, $triangleDirection) {
 	content: "";
@@ -69,25 +59,7 @@
 	} @if ($triangleDirection == right) {
 		border-color: transparent $triangleColor transparent transparent;
 	}
-	// .example { @include css-triangle(5px, #fff, bottom); }
-}
-
-// ======================== cross browser inline-block ===============================
-// http://blog.mozilla.org/webdev/2009/02/20/cross-browser-inline-block/
-@mixin inline-block {
-	display: -moz-inline-stack;
-	-moz-box-orient: vertical;
-	display: inline-block;
-	*display: inline;
-	vertical-align: top;
-	*zoom: 1;
-}
-
-// ======================== Micro Clearfix ===============================
-@mixin clearfix() {
-	*zoom:1;
-	&:before, &:after { content: ""; display: table; }
-	&:after { clear: both; }
+	// .foo { @include css-triangle(5px, #fff, bottom); }
 }
 
 // ======================== OldIE-Class fixes =============================== >>> Requires SASS 3.2 <<<<
