--- a/Assets/_scss/_settings/_modernizr.scss
+++ b/Assets/_scss/_settings/_modernizr.scss
@@ -2,9 +2,7 @@
 // modernizr.scss
 //
 // Modernizr Fallback Mixins
-// DOCS: http://modernizr.com/docs/
-// ==========================================================
-
+// 
 // Usage:
 //	.foo {
 //		@include box-shadow(0 2px 2px rgba(#000, 0.2));
@@ -12,7 +10,9 @@
 //			border: 1px solid lighten(#000, 0.8);
 //		}
 //	}
-
+// 
+// DOCS: http://modernizr.com/docs/
+// ==========================================================
 
 
 // ======================== No Javascript ============================
