--- a/Assets/_scss/globals/_helper.scss
+++ b/Assets/_scss/globals/_helper.scss
@@ -58,7 +58,9 @@
 
 /* Contain floats: h5bp.com/q */
 .clearfix {
-	@include clearfix();
+	*zoom:1;
+	&:before, &:after { content: ""; display: table; }
+	&:after { clear: both; }
 }
 
 .breaker {
