--- a/Assets/_scss/globals/_base.scss
+++ b/Assets/_scss/globals/_base.scss
@@ -1,7 +1,7 @@
 /* ==========================================================
  * base.scss
  *
- * Basic styling for this site (f.e. Header, Footer and Content)
+ * Basic styling for this site (f.e. Header and Footer)
  * DOCS: 
  * ========================================================== */
 
@@ -29,12 +29,6 @@ $ Maincontainer
 
 
 /* =============================================================================
-$ Sprites
-================================================================================ */
-
-
-
-/* =============================================================================
 $ Logos
 ================================================================================ */
 .logo {
@@ -53,36 +47,6 @@ $ Logos
 
 
 /* =============================================================================
-$ Navigations
-================================================================================ */
-.nav {
-	ul { @extend %reset-list; }
-	li {
-		float: left;
-		&:hover a {}
-		&.active a {}
-	}
-	a {
-		display: block;
-	}
-}
-/* .nav */.site-nav {
-	// Main Navigation
-	#header & { // positioning on site-header
-		position: absolute;
-		right: 250px;
-		top: 30px;
-	}		
-}
-/* .nav */.footer-nav {
-	// Footer Navigation
-}
-/* .nav */.breadcrumb {
-	// Breadcrumb Navigation
-}
-
-
-/* =============================================================================
 $ Searchforms
 ================================================================================ */
 .searchform {
@@ -96,11 +60,6 @@ $ Searchforms
 	input[type="search"] {}
 	input[type="submit"] {}
 }
-
-
-/* =============================================================================
-$ Content
-================================================================================ */
 
 
 
