--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -41,5 +41,4 @@
 // =============================================================================
 // Media-Queries
 // =============================================================================
-@import "globals/_media-queries";	// Media-Queries
-
+@import "globals/_print";					// Print styles
