--- a/Assets/_scss/globals/_base.scss
+++ b/Assets/_scss/globals/_base.scss
@@ -7,6 +7,18 @@
 
 
 /* =============================================================================
+$ RWD Viewport rules
+================================================================================ */
+@if $isResponsive == 1 {
+	@-webkit-viewport { width: device-width; }
+		 @-moz-viewport { width: device-width; }
+			@-ms-viewport { width: device-width; }
+			 @-o-viewport { width: device-width; }
+					@viewport { width: device-width; }
+}
+
+
+/* =============================================================================
 $ Maincontainer
 ================================================================================ */
 .wrapper {
