--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -27,10 +27,11 @@
 @import "globals/_base";					// Base Layout
 @import "globals/_grid";					// Grid setup
 @import "globals/_t3-general";		// TYPO3 element styling
+@import "globals/_print";					// Print styles
 
 
 // =============================================================================
-// Extensions & Modules
+// Modules
 // =============================================================================
 @import "modules/_typography";		// Basic typography
 @import "modules/_tables"; 				// Basic styling of tables
@@ -39,6 +40,5 @@
 
 
 // =============================================================================
-// Media-Queries
+// Extensions
 // =============================================================================
-@import "globals/_print";					// Print styles
