--- a/Assets/_scss/globals/_base.scss
+++ b/Assets/_scss/globals/_base.scss
@@ -6,10 +6,10 @@
  * ========================================================== */
 
 
-/* =============================================================================
-$ RWD Viewport rules
-DOCS: http://dev.w3.org/csswg/css-device-adapt/
-================================================================================ */
+// =============================================================================
+// $ RWD Viewport rules
+// DOCS: http://dev.w3.org/csswg/css-device-adapt/
+// =============================================================================
 @if $isResponsive == 1 {
 	@-webkit-viewport { width: device-width; }
 		 @-moz-viewport { width: device-width; }
@@ -47,14 +47,11 @@ $ Logos
 .logo {
 	@include img-wh('logo.png');
 	background: url('../img/logo.png');
-	&:hover {}
+
 	#header & {
 		position: absolute;
 		top: 30px;
 		left: 30px;
-	}
-	#footer & {
-		float: right;
 	}
 }
 
