--- a/Assets/_scss/modules/_navigations.scss
+++ b/Assets/_scss/modules/_navigations.scss
@@ -1,7 +1,7 @@
 /* ==========================================================
- * forms.scss
+ * navigations.scss
  *
- * Basic styling for forms and inputs
+ * Basic styling for all site-navigation elements
  * DOCS: 
  * ========================================================== */
 
