--- a/Assets/_scss/_settings/_placeholders.scss
+++ b/Assets/_scss/_settings/_placeholders.scss
@@ -1,14 +1,14 @@
-// ==========================================================
-// placeholders.scss
-//
-// Placeholders to develope faster
-// We use placeholders to reduce duplicate code
-//
-// Usage:
-// @extend %name;
-//
-// DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html
-// ==========================================================
+/* ==========================================================
+ * placeholders.scss
+ *
+ * Placeholders to develope faster
+ * Use these to reduce duplicate code
+ *
+ * Usage:
+ * @extend %name;
+ *
+ * DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html
+ * ========================================================== */
 
 
 // ======================== Reset list ==================================
